Resolved body element shift when scrollbar appears

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,9 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 /* Scrollbar */
+html {
+  overflow-y: scroll;
+}
 * ::-webkit-scrollbar {
-  @apply h-1 w-2;
+  @apply fixed h-1 w-2;
 }
 * ::-webkit-scrollbar-track {
   @apply mx-1 rounded-md bg-transparent;
